# ronny-monorepo

./: README.md  app.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml  test.yaml
.workflow/: deploy.yaml
src/: env.py  main.py
src/api/: api.py
src/api/endpoints/: debate.py
src/dto/: debate.py
src/dto/debate/: start_form
src/model/: debate.py  user.py
src/repository/: mongo.py
src/routes/: debate.py  debug.py  user.py
src/routes/metadata/: response_example.py
src/service/: chatgpt_service.py  debate_mapper.py  debate_service.py  user_service.py
